--- a/cartão/index.html
+++ b/cartão/index.html
@@ -176,7 +176,7 @@
                 <img src="images/bradesco.png" alt="Logo Programador CS" class="cartao__logo-pc">
                 <h2 class="cartao__numeral">1234 5678 9123 4567</h2>
                 <h3 class="cartao__validade">11/30</h3>
-                <h3 class="cartao__nome-pessoa">KAUANE DE SOUZA</h3>
+                <h3 class="cartao__nome-pessoa">KAUANE DE SOUZA @ozzuas</h3>
                 <h3 class="cartao__conta-corrente">0111 001 00011111-1</h3>
                 <img src="images/ic-mastercard.png" alt="Logo mastercadr" class="cartao__logo-mastercadr">
             </div>
