--- a/cartão/index.html
+++ b/cartão/index.html
@@ -173,7 +173,7 @@
             </div>
             <div class="card__giratorio-conteudo--traseira">
                 <img src="images/ic-chip.png" alt="Chip cartão" class="cartao__chip">
-                <img src="images/bradesco.png" alt="Logo Programador CS" class="cartao__logo-pc">
+                <img src="images/bradesco.png" alt="Logo" class="cartao__logo-pc">
                 <h2 class="cartao__numeral">1234 5678 9123 4567</h2>
                 <h3 class="cartao__validade">11/30</h3>
                 <h3 class="cartao__nome-pessoa">KAUANE DE SOUZA @ozzuas</h3>
